final styling + font sizing + overflow correction

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -71,6 +71,10 @@
       font-family: 'Londrina Solid', sans-serif;
   }
 
+  ::selection {
+    background-color: #e61e28;
+  }
+
   .item label {
       font-family: 'Oxygen', sans-serif;
   }
@@ -227,6 +231,14 @@
       margin: 0;
   }
 
+  footer a {
+    color: #f8f8f0;
+  }
+
+  footer a:visited {
+    color: #f8f8f0;
+  }
+
   .tour-head {
       background-image: url(/images/title-backgrounds/land-cruiser.jpeg);
       background-size: cover;
@@ -289,12 +301,12 @@
 
   summary {
       color: #eeb01f;
-      font-size: 1.7em;
+      font-size: 1.8em;
       font-family: "Oxygen", sans-serif;
   }
 
-  details {
-    font-size: .7em;
+  details p {
+      font-size: 1.5rem;
   }
 
   .landing-main {
@@ -344,17 +356,21 @@
   }
 
   .lb-body-1 a {
-    color: #14183b;
-    font-size: 1.5rem;
-}
+      color: #14183b;
+      font-size: 1.5rem;
+  }
 
-.lb-body-1 ul {
-    padding: 0;
-}
+  .lb-body-1 ul {
+      padding: 0;
+  }
 
-.hours label ul a {
-    font-size: 2rem;
-}
+  .hours label ul a {
+      font-size: 1.5rem;
+  }
+
+  .bullet {
+    list-style-type: circle;
+  }
 
   .lb2 {
       background-color: #5c443a;
@@ -441,6 +457,10 @@
       font-size: 2em;
   }
 
+  .item-info label:last-child {
+      margin-top: .5em;
+  }
+
   .item img {
       width: 20%;
       height: 99%;
@@ -453,7 +473,7 @@
   }
 
   .checkbox {
-      width: 5rem;
+      width: 3rem;
   }
 
   .check-end {
@@ -536,8 +556,8 @@
   }
 
   .termcon label {
-    font-family: 'Oxygen', sans-serif;
-    font-size: 1em;
+      font-family: 'Oxygen', sans-serif;
+      font-size: 1em;
   }
 
   .inputs {
@@ -589,6 +609,7 @@
       display: flex;
       flex-flow: row wrap;
       justify-content: space-around;
+      margin: 3em;
   }
 
   .congrats-base {
@@ -630,6 +651,7 @@
       background-color: #c29b64;
       padding: 1em;
       color: #14183b;
+      margin: 1em;
   }
 
   .cards a:visited {
@@ -637,9 +659,9 @@
   }
 
   .cards a {
-    color: #14183b;
-    font-size: 1.5rem;
-}
+      color: #14183b;
+      font-size: 1.5rem;
+  }
 
   .card-sec {
       display: flex;
@@ -665,24 +687,28 @@
   }
 
   @media only screen and (max-width: 1960px) {
-    .staff-main1 {
-        flex-flow: row wrap;
-        width: 90%;
-    }
+      .staff-main1 {
+          flex-flow: row wrap;
+          width: 90%;
+      }
 
-    .main-txt {
-        width: 50%;
-    }
+      .main-txt {
+          width: 50%;
+      }
 
-    .cards {
-        margin-top: .5em;
-    }
+      .cards {
+          margin-top: .5em;
+      }
   }
 
   @media only screen and (max-width: 640px) {
-    .wrapper {
-        flex-flow:column nowrap;
-    }
+      .head {
+          box-sizing: border-box;
+      }
+
+      .wrapper {
+          flex-flow: column nowrap;
+      }
 
       h1 {
           font-size: 1em;
@@ -699,142 +725,177 @@
           font-size: .7em;
       }
 
-      p, summary, ol, ul, li, a {
-        font-size: 1rem;
+      p,
+      summary,
+      ol,
+      ul,
+      li,
+      a {
+          font-size: 1rem;
       }
 
-      label, ul {
-        padding: 0;
+      label,
+      ul {
+          padding: 0;
       }
 
-  .trans-back {
-      text-align: center;
-      justify-content: center;
-      padding: .5em;
-  }
+      .trans-back {
+          text-align: center;
+          justify-content: center;
+          padding: .5em;
+      }
 
-  .trans-back.row {
-      flex-flow: column-reverse;
-  }
+      .trans-back.row {
+          flex-flow: column-reverse;
+      }
 
-  .trans-back h3 {
-      font-size: 1em;
-  }
+      .trans-back h3 {
+          font-size: 1em;
+      }
 
-  .icons {
-    margin: .5em 0 0 0;
-  }
+      .icons {
+          margin: .5em 0 0 0;
+      }
 
-  .nav-head .trans-back {
-    height:85%;
-    padding: .5em;
-    line-height: 1em;
-  }
+      .nav-head .trans-back {
+          height: 85%;
+          padding: .5em;
+          line-height: 1em;
+      }
 
-.nav-head .trans-back h3 {
-    font-size: 1.5rem;
-}
+      .nav-head .trans-back h3 {
+          font-size: 1.5rem;
+      }
 
-    img {
-      width: 90%;
-      height: 70%;
-  }
+      img {
+          width: 90%;
+          height: 70%;
+      }
 
-  button {
-      width: 50%;
-      font-size: 1em;
-  }
+      button {
+          width: 50%;
+          font-size: 1em;
+      }
 
-  .home-txt {
-      width: 90%;
-  }
+      .home-txt {
+          width: 90%;
+      }
 
-  footer {
-      padding-right: 1em;
-  }
+      footer {
+          padding-right: 1em;
+      }
 
-  .cart,
-  .back {
-      height: 2rem;
-      width: 2rem;
-  }
+      footer p {
+        font-size: .6rem;
+      }
 
-  .landing-txt p {
-    font-size: 1em;
-  }
+      footer h6 {
+        font-size: .6rem;
+      }
 
-  .booking button {
-    width: 15rem;
-    margin:0;
-  }
+      footer li {
+        font-size: .6rem;
+      }
 
-  .item {
-    width: 80%;
-  }
+      .cart,
+      .back {
+          height: 2rem;
+          width: 2rem;
+      }
 
-  .item-info h4 {
-    font-size: 1rem;
-  }
+      .landing-txt p {
+          font-size: .75em;
+      }
 
-  .item-info label {
-    font-size:1rem;
-  }
+      .hours a {
+          font-size: 1em;
+      }
 
-  .checkout-button {
-    width: 25rem;
-  }
+      .booking button {
+          width: 40vw;
+          margin: 0;
+      }
 
-  .checkout-body p {
-    font-size: 1em;
-  }
+      .item {
+          width: 80%;
+      }
 
-  .name {
-    width: 40%;
-  }
+      .item-info h4 {
+          font-size: 1rem;
+      }
 
-  .inputs input{
-    height: 10%;
-    font-size: .8em;
-  }
+      .item-info label {
+          font-size: .7rem;
+      }
 
-  .terms-body {
-    padding: 1em;
-  }
+      .checkout-button {
+          width: 60vw;
+      }
 
-  .checkout-finish button {
-    width: 8rem;
-    margin: .5em;
-  }
+      .checkout-body p {
+          font-size: 1em;
+      }
 
-  .staff-main1 {
-    flex-flow: column wrap;
-    width:90%;
-    align-items: flex-start;
-  }
+      .name {
+          width: 40%;
+      }
 
-  .main-txt {
-    width: 80%;
-  }
+      .inputs input {
+          height: 10%;
+          font-size: .8em;
+      }
 
-  .cards {
-    width: 80%;
-    margin-top: 2em;
-    align-self: center;
-  }
+      .terms-body {
+          padding: 1em;
+      }
 
-  .cards a {
-    font-size: 1em;
-  }
+      .checkout-finish {
+          width: 90%;
+      }
 
-  .slb {
-    display: flex;
-    justify-content: center;
-    margin: 2em;
-    text-align: center;
-  }
+      .checkout-finish button {
+          width: 30vw;
+          margin: .5em;
+      }
 
-  .contact {
-    width: 80%;
-    margin: 0;
-  }
+      .checkout-head {
+          padding: 1em;
+      }
+
+      .staff-main1 {
+          flex-flow: column wrap;
+          width: 90%;
+          align-items: flex-start;
+      }
+
+      .main-txt {
+          width: 80%;
+      }
+
+      .cards {
+          width: 80%;
+          margin-top: 2em;
+          align-self: center;
+      }
+
+      .cards a {
+          font-size: 1em;
+      }
+
+      .slb {
+          display: flex;
+          justify-content: center;
+          margin: 2em;
+          text-align: center;
+      }
+
+      .contact {
+          width: 80%;
+          margin: 0;
+          margin-top: 1em;
+      }
+
+      details p {
+        font-size: .7rem;
+      }
   }
